Stop scrolling index page on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ body {
    padding:0;
    height:100%;
    width: 100%;
-   overflow: hidden;
+   
   
    
 }
@@ -18,6 +18,15 @@ h6{
    min-height:100%;
    position:relative;
    
+   
+}
+.no-scroll {
+  overflow: hidden;
+}
+@media (max-width:680px){
+  .no-scroll {
+    overflow: hidden;
+  }
 }
 
 header {
